[android] Added ids

--- a/android/res/layout/guides_discovery_item.xml
+++ b/android/res/layout/guides_discovery_item.xml
@@ -38,6 +38,7 @@
 
       <TextView
         android:id="@+id/description"
+        android:lines="1"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_marginTop="@dimen/margin_half"/>
