--- a/android/res/layout/outdoor_content.xml
+++ b/android/res/layout/outdoor_content.xml
@@ -1,73 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
-  android:layout_marginTop="@dimen/margin_half"
-  android:orientation="horizontal"
   android:layout_width="match_parent"
-  android:layout_height="match_parent">
-
+  android:layout_height="match_parent"
+  android:layout_marginTop="@dimen/margin_half"
+  android:orientation="horizontal">
   <LinearLayout
     android:layout_width="0dp"
+    android:layout_height="wrap_content"
     android:layout_weight="1"
-    android:gravity="center"
-    android:layout_height="wrap_content">
+    android:gravity="center">
     <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:src="@drawable/time" />
+      app:srcCompat="?guidesTime" />
     <TextView
       android:id="@+id/time"
-      android:layout_marginStart="@dimen/margin_quarter"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginStart="@dimen/margin_quarter"
+      android:ellipsize="end"
       android:fontFamily="@string/robotoRegular"
       android:lines="1"
       android:textColor="?android:textColorSecondary"
       android:textSize="@dimen/text_size_body_4"
       tools:text="12h" />
   </LinearLayout>
-
   <LinearLayout
     android:layout_width="0dp"
+    android:layout_height="wrap_content"
     android:layout_weight="1"
-    android:gravity="center"
-    android:layout_height="wrap_content">
+    android:gravity="center">
     <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:src="@drawable/distance" />
+      app:srcCompat="?guidesDistance" />
     <TextView
       android:id="@+id/distance"
-      android:layout_marginStart="@dimen/margin_quarter"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginStart="@dimen/margin_quarter"
+      android:ellipsize="end"
       android:fontFamily="@string/robotoRegular"
       android:lines="1"
       android:textColor="?android:textColorSecondary"
       android:textSize="@dimen/text_size_body_4"
       tools:text="30km" />
   </LinearLayout>
-
   <LinearLayout
     android:layout_width="0dp"
+    android:layout_height="wrap_content"
     android:layout_weight="1"
-    android:gravity="center"
-    android:layout_height="wrap_content">
+    android:gravity="center">
     <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:src="@drawable/altitude" />
+      app:srcCompat="?guidesAltitude" />
     <TextView
       android:id="@+id/altitude"
-      android:layout_marginStart="@dimen/margin_quarter"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginStart="@dimen/margin_quarter"
+      android:ellipsize="end"
       android:fontFamily="@string/robotoRegular"
       android:lines="1"
       android:textColor="?android:textColorSecondary"
       android:textSize="@dimen/text_size_body_4"
       tools:text="100m" />
   </LinearLayout>
-
 </LinearLayout>
